--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,7 @@ body {
 }
 
 main {
+  width: 100%;
   background: white;
   box-shadow: 0px 1px 2px hsl(0deg 0% 0% / 0.2),
     0px 2px 4px hsl(0deg 0% 0% / 0.2), 0px 10px 20px hsl(0deg 0% 0% / 0.2);
@@ -31,6 +32,7 @@ main {
 
 .avatar {
   position: relative;
+  display: block;
   width: 128px;
   height: 128px;
   margin-top: -64px;
