Mapped over the emojis object to randomly render in the DOM

--- a/styles.css
+++ b/styles.css
@@ -22,6 +22,7 @@ main {
 }
 
 .emojiWrapper {
+  overflow: hidden;
   position: relative;
   display: flex;
   justify-content: space-evenly;
@@ -46,4 +47,17 @@ main h1 {
   font-size: 1.25rem;
   text-align: center;
   margin-block: 16px;
+}
+
+/* Emoji Animation */
+@keyframes fall {
+  from {
+    transform: translateY(0px);
+  }
+  to {
+    transform: translateY(110vh);
+  }
+}
+.emoji {
+  animation: fall linear infinite;
 }
